--- a/app/styles/_type.scss
+++ b/app/styles/_type.scss
@@ -39,3 +39,15 @@
 	margin:10px 0 30px;
 	font-size:20px;
 }
+
+.title{
+	font-size:40px;
+	font-weight:300;
+	text-transform:uppercase;
+}
+
+.highlight {
+	font-weight: bold;
+	font-size:1.2em;
+	margin-bottom:30px;
+}
