--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -7,3 +7,5 @@ $brand-danger:          #d9534f;
 $border-radius-base:        0;
 $border-radius-large:       0;
 $border-radius-small:       0;
+
+$screen-sm: 600px;
