--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,4 +17,5 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 @import "_day.scss";
 @import "_products.scss";
 @import "_btn.scss";
+@import "_colorbox.scss";
 
