--- a/app/styles/_structure.scss
+++ b/app/styles/_structure.scss
@@ -8,6 +8,25 @@ html {
 body{
 	background:none;
 	font-family:Georgia;
+	line-height:1.6;
+	font-size:15px;
+}
+
+.container {
+	@media(min-width:$screen-sm){
+		width: auto;
+		max-width:$container-sm;
+	}
+
+	@media(min-width:$screen-md){
+		width: auto;
+		max-width:$container-md;
+	}
+
+	@media(min-width:$screen-lg){
+		width: auto;
+		max-width:$container-lg;
+	}
 }
 
 .header{
