--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -9,3 +9,8 @@ $border-radius-large:       0;
 $border-radius-small:       0;
 
 $screen-sm: 600px;
+
+
+$navbar-default-color:             #fff ;
+$navbar-default-bg:                #000;
+$navbar-default-border:            #fff;
