--- a/app/styles/_colorbox.scss
+++ b/app/styles/_colorbox.scss
@@ -22,10 +22,10 @@
 */
 #cboxOverlay{background:#000; opacity: 0.29; filter: alpha(opacity = 29);}
 #colorbox{outline:0;}
-    #cboxContent{margin:55px; overflow:visible; background:#fff;}
+    #cboxContent{margin:0 20px; overflow:visible; background:#fff;}
         .cboxIframe{background:#fff;}
-        #cboxError{padding:50px; border:1px solid #ccc;}
-        #cboxLoadedContent{background:#fff; padding:40px;}
+        #cboxError{padding:20px; border:1px solid #ccc;}
+        #cboxLoadedContent{background:#fff; padding:20px;}
         #cboxLoadingGraphic{background:url(../images/colorbox/loading.gif) no-repeat center center; background-size:32px;}
         #cboxLoadingOverlay{background:#fff;}
         #cboxTitle{position:absolute; top:-22px; left:0; color:#000;}
@@ -41,7 +41,7 @@
         #cboxPrevious:hover{background-position:0px -25px;}
         #cboxNext{background-position:-25px 0px; right:22px;}
         #cboxNext:hover{background-position:-25px -25px;}
-        #cboxClose{right:-50px; top:-50px; background:#fff; background-size:60%; width:55px; height:55px; border-radius:55px;}
+        #cboxClose{right:0; top:0px; background:#fff; background-size:60%; width:40px; height:40px; border-radius:55px;}
         #cboxClose:before{top:0; bottom:0; left:0; right:0; position:absolute; display:block; content:" "; background: url(../images/colorbox/close_2x.png) center center no-repeat; background-size:55%;}
         #cboxClose:hover:before{opacity:.5}
         .cboxSlideshow_on #cboxPrevious, .cboxSlideshow_off #cboxPrevious{right:66px;}
@@ -49,3 +49,18 @@
         .cboxSlideshow_on #cboxSlideshow:hover{background-position:-100px -25px;}
         .cboxSlideshow_off #cboxSlideshow{background-position:-100px 0px; right:44px;}
         .cboxSlideshow_off #cboxSlideshow:hover{background-position:-75px -25px;}
+
+@media(max-width:$screen-xs-max){
+    #cboxContent{
+        .subheader{
+            margin:5px 0 10px;
+            font-size:16px;
+        }
+    }
+}
+@media(min-width:$screen-sm){
+    #cboxContent{margin:55px;}
+        #cboxError{padding:50px;}
+        #cboxClose{right:-50px; top:-50px; width:55px; height:55px;}
+        #cboxLoadedContent{padding:40px;}
+}
