--- a/app/styles/_structure.scss
+++ b/app/styles/_structure.scss
@@ -1,8 +1,10 @@
 html {
-	background:url(../images/bg.jpg);
+	background:#eee url(../images/bg.jpg);
 	background-size:cover;
+	background-repeat:no-repeat;
 	width:100%;
 	height:100%;
+	overflow-x:hidden;
 }
 
 body{
@@ -32,10 +34,10 @@ body{
 .header{
 	background:#090909;
 	color:#9d9d9d;
-	padding:10px 0;
+	padding:0 0 5px;
 
-	.links{
-		margin-bottom:0;
+	.navbar-brand{
+		margin:0 auto;
 
 		li{
 			padding: 0 15px;
@@ -51,10 +53,99 @@ body{
 			}
 		}
 	}
+
+	.social-links{
+		padding:20px 0 0;
+
+		.at4-icon{
+			background-color:rgba(255,255,255,.3)!important;
+			background-size:20px!important;
+			width:20px;
+			height:20px
+		}
+	}
+
+	@media(max-width:$screen-xs-max){
+		padding:0;
+
+		.navbar-nav{
+			margin-bottom:0;
+			margin-top:0;
+		}
+
+		.navbar-toggle {
+			border:0;
+			padding:3px;
+			margin-top:15px;
+			margin-right:10px;
+
+			&:hover{
+				background:#000;
+			}
+
+
+			.icon-bar{
+				height:3px;
+				background:#fff;
+			}
+		}
+
+		.navbar-collapse {
+			background:$brand-primary;
+			text-transform: uppercase;
+
+			.nav{
+				a{
+					color:#fff;
+					border-bottom:1px solid rgba(255,255,255,.2);
+					font-weight: 300;
+
+					&:hover{
+						color:#fff;
+						opacity: .8;
+					}
+
+					&:after {
+						content : ">";
+						display: block;
+						position: absolute;
+						top:10px;
+						right:15px;
+					}
+
+					.glyphicon{
+						margin-right:10px;
+					}
+					
+					&.disabled {
+						cursor:default;
+						opacity: .6;
+
+						&:hover{
+							opacity: .6;
+						}
+					}
+				}
+			}
+		}
+
+		.social-links{
+			padding:10px 14px 5px;
+			&.nav.navbar-nav a:after {
+				content:"";
+			}
+		}
+	}
+
+	@media(min-width:$screen-sm){
+		margin:0;
+	}
+
 }
 
 .footer {
 	font-size:10px;
 	text-align:center;
-	margin-top:40px
+	margin-top:40px;
+	padding:0 30px 30px;
 }
