add social to header and add all 12 days with dummy content

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
 //styles
 @import "_structure.scss";
+@import "_header.scss";
 @import "_type.scss";
 @import "_helpers.scss";
 @import "_images.scss";
